--- a/src/www/.babelrc
+++ b/src/www/.babelrc
@@ -1,16 +1,7 @@
 {
+  "presets": ["next/babel"],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": false }]
-  ],
-  "presets": [
-    [
-      "babel-preset-gatsby",
-      {
-        "targets": {
-          "browsers": [">0.25%", "not dead"]
-        }
-      }
-    ]
   ]
 }
