--- a/src/www/package.json
+++ b/src/www/package.json
@@ -3,44 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "author": "peabnuts123",
-  "keywords": [
-    "gatsby"
-  ],
   "scripts": {
-    "start": "gatsby develop --port 8090",
-    "build": "gatsby build",
+    "start": "next dev",
+    "build": "next build && next export",
     "simulate-build": "npm run type-check && npm run lint && npm run test && npm run build && echo 'Build succeeded'",
     "type-check": "tsc --project ./tsconfig.json",
     "lint": "eslint --max-warnings 0 --no-error-on-unmatched-pattern \"./*.{js,jsx,ts,tsx}\" \"src/**/*.{js,jsx,ts,tsx}\" \"test/**/*.{js,jsx,ts,tsx}\"",
     "test": "ENVIRONMENT_ID=test echo 'No tests yet 🙃'",
-    "test:coverage": "npm run test -- --collectCoverage true && echo '@TODO'",
-    "clean": "gatsby clean"
+    "test:coverage": "npm run test -- --collectCoverage true && echo '@TODO'"
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-sass": "^2.7.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "aws-sdk": "^2.948.0",
+    "bulma": "^0.9.3",
+    "classnames": "^2.3.1",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
+    "next": "11.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@types/classnames": "^2.2.11",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "bulma": "^0.9.2",
-    "classnames": "^2.2.6",
-    "eslint": "^7.15.0",
-    "eslint-plugin-react": "^7.21.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@types/react": "17.0.14",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "7.31.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-layout": "^1.6.0",
-    "mobx": "^6.1.8",
-    "mobx-react-lite": "^3.2.0",
-    "react-feather": "^2.0.9",
-    "sass": "^1.30.0",
-    "typescript": "^4.1.3",
-    "uuid": "^8.3.2"
+    "sass": "^1.35.2",
+    "typescript": "4.3.5",
+    "yargs": "^17.0.1"
   }
 }
