--- a/src/api/package.json
+++ b/src/api/package.json
@@ -22,6 +22,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-lambda": "^3.24.0",
+    "@aws-sdk/credential-provider-ini": "^3.24.0",
+    "@types/archiver": "^5.1.1",
     "@types/aws-lambda": "^8.10.64",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
@@ -30,6 +33,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "archiver": "^5.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "eslint": "^7.15.0",
