--- a/src/www/package.json
+++ b/src/www/package.json
@@ -26,9 +26,12 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.24.0",
+    "@aws-sdk/credential-provider-ini": "^3.24.0",
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@types/mime-types": "^2.1.0",
     "@types/react": "17.0.14",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -37,6 +40,7 @@
     "eslint-config-next": "11.0.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "mime-types": "^2.1.32",
     "sass": "^1.35.2",
     "typescript": "4.3.5",
     "yargs": "^17.0.1"
