--- a/src/api/package.json
+++ b/src/api/package.json
@@ -17,8 +17,9 @@
   "author": "peabnuts123",
   "license": "UNLICENSED",
   "dependencies": {
-    "aws-lambda": "^1.0.6",
-    "aws-sdk": "^2.804.0",
+    "@aws-sdk/client-dynamodb": "^3.24.0",
+    "@aws-sdk/lib-dynamodb": "^3.24.0",
+    "@aws-sdk/util-dynamodb": "^3.24.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
