[API] Replace build system with webpack / bundle handlers individually

--- a/src/api/package.json
+++ b/src/api/package.json
@@ -8,7 +8,7 @@
     "simulate-api:watch": "nodemon -L --watch src --watch test --ext ts,js --exec 'npm run simulate-api'",
     "simulate-build": "npm run type-check && npm run lint && npm run test && npm run build && echo 'Build succeeded'",
     "lint": "eslint --max-warnings 0 --no-error-on-unmatched-pattern \"./*.{js,ts}\" \"src/**/*.{js,ts}\" \"test/**/*.{js,ts}\"",
-    "build": "rm -rf build && tsc --project ./tsconfig.json",
+    "build": "rm -rf build && webpack",
     "type-check": "tsc --project test",
     "test": "jest",
     "test:watch": "nodemon --ext 'ts,js' --exec 'npm test'",
@@ -28,6 +28,7 @@
     "@types/aws-lambda": "^8.10.64",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/glob": "^7.1.4",
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@types/uuid": "^8.3.0",
@@ -38,14 +39,18 @@
     "cors": "^2.8.5",
     "eslint": "^7.15.0",
     "express": "^4.17.1",
+    "glob": "^7.1.7",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "nodemon": "^2.0.6",
     "serve": "^11.3.2",
     "ts-jest": "^26.4.4",
+    "ts-loader": "^9.2.4",
     "ts-node": "^9.1.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2",
     "yargs": "^16.2.0"
   }
 }
