--- a/src/app/package.json
+++ b/src/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "simulate-build": "npm run type-check && npm run lint && npm run test && npm run build && echo 'Build succeeded'",
     "lint": "eslint --max-warnings 0 --no-error-on-unmatched-pattern \"./*.{js,ts}\" \"src/**/*.{js,ts}\" \"test/**/*.{js,ts}\"",
-    "build": "rm -rf build && parcel build 'src/handlers/www-proxy/index.ts' --dist-dir build --no-source-maps",
+    "build": "rm -rf build && webpack",
     "type-check": "tsc",
     "type-check:test": "tsc --project test",
     "test": "jest",
@@ -22,16 +22,20 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-typescript": "^7.14.5",
     "@types/aws-lambda": "^8.10.64",
+    "@types/glob": "^7.1.4",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.15.0",
+    "glob": "^7.1.7",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "parcel": "^2.0.0-beta.2",
     "serve": "^12.0.0",
     "ts-jest": "^26.4.4",
+    "ts-loader": "^9.2.4",
     "typescript": "^4.1.2",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2",
     "yargs": "^16.2.0"
   }
 }
