--- a/src/api/package.json
+++ b/src/api/package.json
@@ -48,6 +48,7 @@
     "ts-loader": "^9.2.4",
     "ts-node": "^9.1.0",
     "tsconfig-paths": "^3.9.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.1.2",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
