--- a/src/app/package.json
+++ b/src/app/package.json
@@ -33,6 +33,7 @@
     "serve": "^12.0.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^9.2.4",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.1.2",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
