--- a/src/www/package.json
+++ b/src/www/package.json
@@ -9,8 +9,9 @@
     "simulate-build": "npm run type-check && npm run lint && npm run test && npm run build && echo 'Build succeeded'",
     "type-check": "tsc --project ./tsconfig.json",
     "lint": "eslint --max-warnings 0 --no-error-on-unmatched-pattern \"./*.{js,jsx,ts,tsx}\" \"src/**/*.{js,jsx,ts,tsx}\" \"test/**/*.{js,jsx,ts,tsx}\"",
-    "test": "ENVIRONMENT_ID=test echo 'No tests yet 🙃'",
-    "test:coverage": "npm run test -- --collectCoverage true && echo '@TODO'"
+    "test": "ENVIRONMENT_ID=test jest",
+    "test:watch": "nodemon --ext 'ts,tsx,js,jsx' --exec 'npm test'",
+    "test:coverage": "npm run test -- --collectCoverage true && serve --config serve.coverage.json --no-clipboard -l 8081"
   },
   "license": "UNLICENSED",
   "dependencies": {
@@ -30,17 +31,24 @@
     "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
     "@types/mime-types": "^2.1.0",
     "@types/react": "17.0.14",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "babel-jest": "^27.0.6",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "mime-types": "^2.1.32",
+    "nodemon": "^2.0.12",
     "sass": "^1.35.2",
+    "serve": "^12.0.0",
     "typescript": "4.3.5",
     "yargs": "^17.0.1"
   }
